@@ -4,24 +4,39 @@
 
 ## Download and Installation
 
-## Usage
+The directory includes all application.py, the main web application, and a number of supporting functions (e.g ocr.py, name_check.py etc etc)
 
-### Basic Usage
+Within 'model' is all the required trained models, and a number of other required objects
 
+Within stanford-ner is the stanford named entity recogniser, which needs to be run as a java servlet. cd in the stanford-ner directory and run:
 
+"java -Djava.ext.dirs=./lib -cp stanford-ner.jar edu.stanford.nlp.ie.NERServer -port 9199 -loadClassifier english.all.3class.distsim.crf.ser.gz"
 
-### Advanced Usage
+This will load an instance of the named entity tagger, which the application makes calls to
 
-
-
-## Bugs and Issues
-
-
-
-## Custom Builds
+(needs java)
 
 
-## About
+###  Usage
+
+You'll need to set the following variables in your enviro
+
+export GOOGLE_APPLICATION_CREDENTIALS='PATHTOSERVICEACCOUNTCREDENTIALS(the api key).JSON'
+
+This allows you to access my google cloud storage bucket, you could equally set up your own
+
+export FLASK_APP=application.py
+
+also set: export FLASK_DEBUG=1
+
+so the browswer doesnt cache the site
+
+run the app by running:
+
+flask run
+
+
+
 
 
 
